<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ahs.cashnote.ui.MainActivity">


    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/list_transactions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/export_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>