<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/tvDate"
            android:text="@string/rv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />

        <TextView
            android:id="@+id/tvDesc"
            android:text="@string/rv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvCategory"
            android:text="@string/rv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvAmount"
            android:text="@string/rv_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <TextView
            android:id="@+id/tvTypeTransaction"
            android:text="@string/type_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_edit"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_delete" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>