<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddDataActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBackground"
            app:navigationIconTint="@color/colorAccent"
            app:titleTextColor="@color/toolbarTextColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDateLabel"
                    android:layout_width="86dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:text="@string/select_date"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintVertical_bias="0.022" />

                <Button
                    android:id="@+id/datePickerButton"
                    style="?android:spinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_margin="2dp"
                    android:text="@string/_31_01_2025"
                    android:textColor="?attr/colorOnSurface"
                    android:backgroundTint="?attr/colorSurface"
                    android:onClick="openDatePicker"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="86dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:text="@string/description"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintVertical_bias="0.022" />

                <EditText
                    android:id="@+id/edDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:ems="5"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="86dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:text="@string/category"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintVertical_bias="0.022" />

                <Spinner
                    android:id="@+id/spCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    style="?android:spinnerStyle"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTypeTransaction"
                    android:layout_width="86dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:text="@string/type_transaction"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintVertical_bias="0.022" />

                <Spinner
                    android:id="@+id/spTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:textSize="12sp"
                    style="?android:spinnerStyle"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="86dp"
                    android:layout_height="24dp"
                    android:layout_margin="2dp"
                    android:text="@string/amount"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintVertical_bias="0.022" />

                <EditText
                    android:id="@+id/edAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:ems="5"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_saved"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:padding="2dp"
                android:text="@string/save" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>